Changed folder name

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /DotnetCore.Api/DotnetCore.Api.WinAuth/bin/Debug/netcoreapp3.1
 /DotnetCore.Api/DotnetCore.Api.WinAuth/obj
 /DotnetCore.Api/.vs/DotnetCore.Api/v16
+/dotnetcore.api/.vs/dotnetcore.api/DesignTimeBuild/.dtbcache.v2
