--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /DotnetCore.Api/DotnetCore.Api.WinAuth/obj
 /DotnetCore.Api/.vs/DotnetCore.Api/v16
 /dotnetcore.api/.vs/dotnetcore.api/DesignTimeBuild/.dtbcache.v2
+/dotnetcore.ap/.vs/dotnetcore.api/v16/.suo
+/dotnetcore.ap/.vs/dotnetcore.api/DesignTimeBuild/.dtbcache.v2
+/dotnetcore.ap/dotnetcore.api.winaut/bin/Debug/netcoreapp3.1
+/dotnetcore.ap/dotnetcore.api.winaut/obj
